<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".MainTest"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:focusableInTouchMode="false"
    android:id="@+id/relative_layout"
    android:columnCount="3"
    android:rowCount="4">


    <Button
        android:layout_height="@dimen/button_heigh"
        android:layout_width="@dimen/button_width"
        android:layout_gravity="center"
        android:textSize="@dimen/button_text_size"
        android:text="@string/test_ls"
        android:id="@+id/btn_ls_vbr"
        android:layout_row="0"
        android:layout_column="0"
        android:onClick="testLs"/>

    <Button
        android:layout_height="@dimen/button_heigh"
        android:layout_width="@dimen/button_width"
        android:layout_gravity="center"
        android:textSize="@dimen/button_text_size"
        android:text="@string/test_btns"
        android:id="@+id/btn_btns"
        android:layout_row="0"
        android:layout_column="1"
        android:onClick="testKeys"/>


    <Button
        android:layout_height="@dimen/button_heigh"
        android:layout_width="@dimen/button_width"
        android:layout_gravity="center"
        android:textSize="@dimen/button_text_size"
        android:text="@string/test_loop_back"
        android:id="@+id/btn_loop_back"
        android:layout_row="0"
        android:layout_column="2"
        />


    <Button
        android:layout_height="@dimen/button_heigh"
        android:layout_width="@dimen/button_width"
        android:layout_gravity="center"
        android:textSize="@dimen/button_text_size"
        android:text="@string/test_recv"
        android:id="@+id/btn_recv"
        android:layout_row="1"
        android:layout_column="0"
        android:onClick="playSoundOnReceiver"/>


    <Button
        android:layout_height="@dimen/button_heigh"
        android:layout_width="@dimen/button_width"
        android:layout_gravity="center"
        android:textSize="@dimen/button_text_size"
        android:text="@string/test_spk"
        android:id="@+id/btn_spk"
        android:layout_row="1"
        android:layout_column="1"
        android:onClick="playSoundOnSpeaker"/>

    <Button
        android:layout_height="@dimen/button_heigh"
        android:layout_width="@dimen/button_width"
        android:layout_gravity="center"
        android:textSize="@dimen/button_text_size"
        android:text="@string/test_orientation"
        android:id="@+id/btn_orientation"
        android:layout_row="1"
        android:layout_column="2"
        android:onClick="accelerometerTest"/>

    <Button
        android:layout_height="@dimen/button_heigh"
        android:layout_width="@dimen/button_width"
        android:layout_gravity="center"
        android:textSize="@dimen/button_text_size"
        android:text="@string/test_info"
        android:id="@+id/btn_info"
        android:layout_row="2"
        android:layout_column="2"
        android:onClick="showInfo"/>

    <Button
        android:layout_height="@dimen/button_heigh"
        android:layout_width="@dimen/button_width"
        android:layout_gravity="center"
        android:textSize="@dimen/button_text_size"
        android:text="@string/test_touch"
        android:id="@+id/btn_touch"
        android:layout_row="2"
        android:layout_column="0"
        android:onClick="touchTest"/>

    <Button
        android:layout_height="@dimen/button_heigh"
        android:layout_width="@dimen/button_width"
        android:layout_gravity="center"
        android:textSize="@dimen/button_text_size"
        android:text="@string/test_vbr"
        android:id="@+id/btn_vbr"
        android:layout_row="2"
        android:layout_column="1"
        android:onClick="vibraTest"/>

    <Button
        android:layout_height="@dimen/button_heigh"
        android:layout_width="@dimen/button_width"
        android:layout_gravity="center"
        android:textSize="@dimen/button_text_size"
        android:text="@string/test_cam_f"
        android:id="@+id/btn_camera_f"
        android:layout_row="3"
        android:layout_column="0"
        android:onClick="frontCameraTest"/>

    <Button
        android:layout_height="@dimen/button_heigh"
        android:layout_width="@dimen/button_width"
        android:layout_gravity="center"
        android:textSize="@dimen/button_text_size"
        android:text="@string/test_cam_b"
        android:id="@+id/btn_camera_b"
        android:layout_row="3"
        android:layout_column="1"
        android:onClick="backCameraTest"/>

    <Button
        android:layout_height="@dimen/button_heigh"
        android:layout_width="@dimen/button_width"
        android:layout_gravity="center"
        android:textSize="@dimen/button_text_size"
        android:text="@string/test_led"
        android:id="@+id/btn_led"
        android:layout_row="3"
        android:layout_column="2"
        android:onClick="flashLedTest"/>



</GridLayout>
